--- a/index.html
+++ b/index.html
@@ -500,8 +500,9 @@
                             if (dir.spawn && loaded) {
                                 robots[dir.rnd].name = dir.rnd + ""
                                 robots[dir.rnd].setEnabled(true);
-                              setInterval(function(){
                                 scene.beginAnimation(robots[dir.rnd].skeleton, 0, 200, true,  dir.threshold);
+                              setInterval(function(){
+                             //   scene.beginAnimation(robots[dir.rnd].skeleton, 0, 200, true,  dir.threshold);
                               }, 9000)
                                 robots[dir.rnd].rotation.y = dir.rotY
                                 scene.meshes.forEach(function(m) {
