--- a/index.html
+++ b/index.html
@@ -495,16 +495,17 @@
                     var available = []
                     var frame = 0
                     socket.on('directions', function(dirs) {
+                        frame += 100;
                         for (var id in dirs) {
                             var dir = dirs[id];
-                                frame += 1000
+                                
                             if (dir.spawn && loaded) {
                                 robots[dir.rnd].name = dir.rnd + ""
                                 robots[dir.rnd].setEnabled(true);
                                 scene.beginAnimation(robots[dir.rnd].skeleton, 0, 200, true,  dir.threshold);
-                            /*  if((frame%100)== 0){
-                               scene.beginAnimation(robots[dir.rnd].skeleton, 0, 200, true,  dir.threshold);
-                              }*/
+                                if(frame%300 == 0){
+                                scene.beginAnimation(robots[dir.rnd].skeleton, 0, 200, true,  dir.threshold);
+                                }
                                 robots[dir.rnd].rotation.y = dir.rotY
                                 scene.meshes.forEach(function(m) {
                                     if (m.name === dir.rnd) {
