--- a/index.html
+++ b/index.html
@@ -503,8 +503,7 @@
                                 robots[dir.rnd].name = dir.rnd + ""
                                 robots[dir.rnd].setEnabled(true);
                                 if(frame%10000 == 0){
-                           //     scene.beginAnimation(robots[dir.rnd].skeleton, 0, 250, true,  dir.threshold);
-                                    scene.beginAnimation(robots[dir.rnd].skeleton, 450, 550, true,  dir.threshold);
+                                    scene.beginAnimation(robots[dir.rnd].skeleton, dir.from, dir.to, true,  dir.threshold);
                                 }
                                 robots[dir.rnd].rotation.y = dir.rotY
                                 scene.meshes.forEach(function(m) {
