--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 
                     var robots = []
                     var loaded = false
-                    BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/eddicke/chat-example/master/assets/models/", "medallionFighter.babylon", scene, function(newMeshes, particleSystems, skeletons) {
+                    BABYLON.SceneLoader.ImportMesh("", "https://raw.githubusercontent.com/eddicke/chat-example/master/assets/models/", "111newplayeruntitled.babylon", scene, function(newMeshes, particleSystems, skeletons) {
 
                         var medallion;
                         loaded = true;
