--- a/index.html
+++ b/index.html
@@ -444,9 +444,9 @@
                                 medallion = newMeshes[index];
                                 for (var i = 0; i < 5; i++) {
                                     var medallion2 = medallion.clone("medallion2");
-                                    medallion2.scaling.set(.005, .005, .005);
+                                    medallion2.scaling.set(.003, .003, .003);
                                     medallion2.rotation.y = Math.PI
-                                    medallion2.position.y = 36
+                                    medallion2.position.y = 33
                                     medallion2.skeleton = medallion.skeleton.clone("clonedSkeleton");
                                     //var walk = scene.beginAnimation(medallion2.skeleton, 312, 332, true, 1);
                                     medallion2.setEnabled(false)
@@ -505,7 +505,7 @@
                           //      if(frame%10000 == 0){
                                  //   scene.beginAnimation(robots[dir.rnd].skeleton, dir.from, dir.to, true,  dir.threshold);
                                 if(dir.play){
-                                robots[dir.rnd].skeleton.beginAnimation(dir.clip, false, 1);
+                                robots[dir.rnd].skeleton.beginAnimation(dir.clip, true, 1);
                                 }
                             //    }
                                 robots[dir.rnd].rotation.y = dir.rotY
