--- a/index.html
+++ b/index.html
@@ -457,16 +457,21 @@
                             }
                         }
                         var run = false
+                        var walk = false
                         document.addEventListener("keydown", function(ev){
                           if(ev.which == 16){
-                           run = true   
+                           run = true 
+                              walk = false
                           }
-                            
+                             if(ev.which == 32){
+                           walk = true   
+                                 run = true
+                          }
                         })
                         
                         setInterval(function(){
-                           socket.emit("playClip", run);
-                        }, 2)
+                           socket.emit("playClip", {jump: run, walk: walk});
+                        }, 1)
                          socket.on('anim', function(clips) {
                         for (var id in clips) {
                             var clip = clips[id];
