--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
                         })
                     socket.on("keyboard", function(data){
                       if(loaded){
-                          alert(data)
+                          console.log("input from player with Id"+data)
                          // robots[data.id].skeleton.beginAnimation("roll", false, 1);
                       }
                         
