--- a/index.html
+++ b/index.html
@@ -576,9 +576,9 @@
                     socket.on("keyboard", function(data){
       
                        //   console.log("input from player with Id"+data)
-                        setInterval(function(){
+                     //   setInterval(function(){
                          robots[data].skeleton.beginAnimation("roll", false, 1);
-                        }, 3000)
+                     //   }, 3000)
                         
                     })
                     var velocity = 0
