--- a/index.html
+++ b/index.html
@@ -522,7 +522,7 @@ document.addEventListener("keydown", function(ev){
           
               if(!change){
                 data.name = "losser"
-                  robots[user].skeleton.beginAnimation("roll", true, 1)
+                  robots[user].skeleton.beginAnimation("walk", true, 1)
              //   alert("This is "+data.name+" with is "+user);
               }
           
