--- a/index.html
+++ b/index.html
@@ -485,8 +485,8 @@
 
                                 if (change) {
                                     data.name = "Guestss"
-
-                                    robots[user].skeleton.beginAnimation("walk", true, 1)
+                                     scene.beginAnimation(robots[user].skeleton, 863, 891, true, 1);	
+                                    //robots[user].skeleton.beginAnimation("walk", true, 1)
                                 }
 
                                 if (!change) {
