--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
                                     var walkAnim = scene.beginAnimation(robots[user].skeleton, 863, 891, true, 1)
                                     walkAnim.stop()
                                     walkAnim.goToFrame(1);														
-                                    scene.beginAnimation(players[2].skeleton, 283, 339, true, 1)
+                                    scene.beginAnimation(robots[user].skeleton, 283, 339, true, 1)
                                 }
 
                             })
