--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                             socket.on("user", function (damage, change, data) {
                                 var user = data.user;
                                 if(damage){
-                                    alert(damage)
+                                 //   alert(damage)
                                     scene.beginAnimation(robots[user].skeleton, 432, 510, false, 1, function(){
                                     count = 0
                                     });		
@@ -516,13 +516,13 @@
                                 }
 
                                 if (!change) {
-                                    data.name = "losser"
+                                   /* data.name = "losser"
                                     robots[user].skeleton.beginAnimation("power", true, 1)
                                     
                                     var walkAnim = scene.beginAnimation(robots[user].skeleton, 863, 891, true, 1)
                                     walkAnim.stop()
                                     walkAnim.goToFrame(1);														
-                                    scene.beginAnimation(robots[user].skeleton, 283, 339, true, 1)
+                                    scene.beginAnimation(robots[user].skeleton, 283, 339, true, 1)*/
                                 }
 
                             })
