--- a/index.html
+++ b/index.html
@@ -514,7 +514,9 @@
                                         });				
                                    
                                 }
-                                   
+                                   if(restpose){
+                                       scene.beginAnimation(robots[user].skeleton, 283, 339, true, 1)
+                                   }
                             })
 
                         });
