--- a/index.html
+++ b/index.html
@@ -515,7 +515,7 @@
                                    
                                 }
                                    if(restpose){
-                                       scene.beginAnimation(robots[user].skeleton, 283, 339, true, 1)
+                                //       scene.beginAnimation(robots[user].skeleton, 283, 339, true, 1)
                                    }
                             })
 
