--- a/index.html
+++ b/index.html
@@ -593,6 +593,7 @@
                                         robots[dir.rnd].setEnabled(true);
                                     }
                                     robots[dir.rnd].position.x = dir.lastpos.x
+                                    robots[dir.rnd].position.y = dir.lastpos.y
                                     robots[dir.rnd].position.z = dir.lastpos.z
                                 }
                             }
