--- a/index.html
+++ b/index.html
@@ -368,6 +368,7 @@
                         //sphere instance to ease camera tracking
                         var sphere = new BABYLON.Mesh.CreateSphere("sp", 10, 1, scene);
                         sphere.visibility = 0;
+                        sphere.position.y = 34
                         //spawn the players
                         //spawn the players
                         var createCyberMetro = function (id) {
