--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                             }
                             if(ev.which == 32){
                                 velY += 4;
-                                sphere.position.y = velY
+                                sphere.position.y = sphere.position.y + velY
                             }
                         })
                         document.addEventListener("keyup", function (ev) {
