--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
                                 fly = false
                                  scene.registerBeforeRender(function(){
                                      if(!fly){
-                                sphere.position = BABYLON.Vector3.Lerp(sphere.position, new BABYLON.Vector3(0, 33, 0), .05)
+                                sphere.position = BABYLON.Vector3.Lerp(sphere.position, new BABYLON.Vector3(sphere.position.x, 33, sphere.position.z), .05)
                                      }
                                  })
                             }
