--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                             sphere.locallyTranslate(new BABYLON.Vector3(0, 0, velocity))
                             camera.target.x = sphere.position.x
                             camera.target.z = sphere.position.z
-                            camera.target.y = sphere.position.y
+                            camera.target.y = sphere.position.y+5
                         })
                         //send the sphere position to other clients
                          setInterval(function(){
