--- a/index.html
+++ b/index.html
@@ -633,14 +633,14 @@
                             }
                         })
 
-                        scene.registerBeforeRender(function () {
-                            
+                         setInterval(function(){
                             sphere.rotation.y = rotY;
                             sphere.locallyTranslate(new BABYLON.Vector3(0, 0, velocity))
                             camera.target.x = sphere.position.x
                             camera.target.z = sphere.position.z
                             camera.target.y = sphere.position.y+5
-                        })
+                        }, 1000);
+                        
                         //send the sphere position to other clients
                          setInterval(function(){
                             socket.emit("getPosition", sphere.getAbsolutePosition())
