--- a/index.html
+++ b/index.html
@@ -633,13 +633,13 @@
                             }
                         })
 
-                         setInterval(function(){
+                         scene.registerBeforeRender(function(){
                             sphere.rotation.y = rotY;
                             sphere.locallyTranslate(new BABYLON.Vector3(0, 0, velocity))
                             camera.target.x = sphere.position.x
                             camera.target.z = sphere.position.z
                             camera.target.y = sphere.position.y+5
-                        }, engine.getDeltaTime());
+                        });
                         
                         //send the sphere position to other clients
                          setInterval(function(){
